--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@heroicons/react": "v1",
+    "@metamask/sdk": "^0.32.0",
+    "@rainbow-me/rainbowkit": "^2.2.4",
+    "@tanstack/react-query": "^5.66.9",
     "next": "14.2.21",
     "react": "^18",
     "react-debounce-input": "^3.3.0",
     "react-dom": "^18",
-    "react-i18next": "^15.4.1"
+    "react-i18next": "^15.4.1",
+    "viem": "2.x",
+    "wagmi": "^2.14.12"
   },
   "devDependencies": {
     "@types/node": "^20",
